--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_animate: ^4.5.2
   flutter_svg: ^2.0.9
   fl_chart: ^0.66.0
+  salomon_bottom_bar: ^3.3.2
 
 dev_dependencies:
   flutter_test:
